--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,2 +1,13 @@
 
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, quae! Reiciendis modi id, expedita dolorum est nesciunt omnis quibusdam harum totam. Saepe rerum repellat ut officiis suscipit blanditiis nobis earum?
+<div class="row">
+    <div class="col-md-4 col-sm-6" *ngFor="let gif of resultados">
+        <div class="card">
+            <img [src]="gif.images.downsized_medium.url" alt="" class="card-img-top">
+            <div class="card-body">
+                <p class="card-text">
+                    {{gif.title}}
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
